--- a/css_study/11_css.html
+++ b/css_study/11_css.html
@@ -3,49 +3,217 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>카카오계정</title>
         <style>
+            /* 마진 없애기 */
+            body {
+                margin: 0px;
+                /* 스크롤이 생기는 이유는 h1에 마진이 들어가있기 때문 */
+                height: 100vh;
+            }
             #container {
-                width: 1900px;
-                height: 890px;
-                background-color: white;
+                /* %는 부모기준 100%이다. */
+                width: 100%;
+                height: 100%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
             }
-
-            #all {
-                width: 660px;
-                height: 700px;
-                background-color: green;
+            #main_box {
+                width: 100%;
+                height: 610px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+            #login_container {
+                width: 580px;
+                height: 100%;
+                padding: 0 69px;
+                margin: 40px auto 30px;
+                box-sizing: border-box;
+                border: 1px solid #dbdbdb;
+            }
+            #login_box {
+                width: 440px;
+                height: 386px;
+                padding: 55px 0 50px 0;
             }
 
-            #header {
-                width: 660px;
-                height: 100px;
-                background-color: blue;
-                font-size: 30px;
+            #form_container {
+                width: 440px;
+                height: 382px;
+            }
+            form {
+                width: 440px;
+                height: 338px;
+
                 display: flex;
-                justify-content: center;
+                flex-direction: column;
+            }
+
+            input {
+                width: 100%;
+                height: 45px;
+                padding: 10px 0 8px;
+                box-sizing: border-box;
+                font-size: 18px;
+                color: #191919;
+                outline: none;
+                border: none;
+                background-color: transparent;
+                border-bottom: 2px solid lightblue;
+                margin-bottom: 1px;
+            }
+            input[type="password"] {
+                /* 비밀번호 입력 간격 */
+                letter-spacing: 0.15rem;
+            }
+
+            input:focus {
+                border-bottom: 2px solid black;
+            }
+
+            #save_sign {
+                display: flex;
+
+                height: 20px;
+                display: flex;
+                align-items: center;
+            }
+            #save_sign > input {
+                width: 20px;
+                height: 20px;
+                margin: 0;
+                margin-right: 8px;
+                cursor: pointer;
+            }
+            #save_sign > label {
+                cursor: pointer;
+                font-size: 14px;
+                color: #666666;
+                line-height: 20px;
+            }
+            #btn_box {
+                width: 440px;
+                height: 148px;
+                padding-top: 40px;
+            }
+            #btn_box > button {
+                width: 100%;
+                height: 50px;
+                font-weight: 400;
+                border-radius: 4px;
+
+                border: none;
+                cursor: pointer;
+                font-size: 16px;
+            }
+            #btn_box > button:nth-child(1) {
+                background-color: #fee500;
+            }
+             #btn_box > button:nth-child(1) :hover {
+                background-color: #f4dc00;
+            }
+            #btn_box > button:nth-child(3) {
+                background-color: #f0f0f0;
+            }
+           
+            #btn_box > button:nth-child(3):hover {
+                background-color: #e6e6e6;
+            }
+            #line {
+                display: flex;
+                align-items: center;
+                width: 100%;
+                padding: 15px 0;
+                text-align: center;
+            }
+
+            #line::before,
+            #line::after {
+                content: "";
+                display: inline-block;
+                width: calc(50%-20px);
+                margin: 8 0px;
+                height: 1px;
+                background-color: rgba(0, 0, 0, 0.06);
+            }
+            #line > span {
+                font-size: 12px;
+                color: #828282;
+                width: 40px;
+            }
+            #login_option {
+                width: 100%;
+                height: 18px;
+                margin-top: 26px;
+                display: flex;
+                justify-content: space-between;
                 align-items: center;
             }
 
-            #main {
-                width: 660px;
-                height: 500px;
-                background-color: pink;
+            a{ 
+                font-size: 12px;
+                color: #191919;
+                text-decoration: none;
+                display: flex;
+                align-items: center;
             }
 
-            .box {
+            #login_option > div {
+                display: flex;
+                align-items: center;
+            }
+
+            #login_option > div > a:nth-child(1)::after {
+                content:"";
+                display: inline-block;
+                width: 1px;
+                height: 10px;
+                margin: 4px 10px;
+                background-color: rgba(0, 0, 0, 0.08);
+            }
+            
+            /* 스크롤 사라짐 */
+            h1 {
+                margin: 0;
             }
         </style>
     </head>
     <body>
         <div id="container">
-            <div id="all">
-                <div id="header">kakao</div>
-                <div id="main"></div>
-                <div id="header"></div>
+            <div id="main_box">
+                <h1>kakao</h1>
+                <div id="login_container">
+                    <div id="login_box">
+                        <div id="form_container">
+                            <form action="">
+                                <input type="text" placeholder="카카오메일 아이디, 이메일, 전화번호" />
+                                <input type="password" placeholder="비밀번호" />
+                                <div id="save_sign">
+                                    <input type="checkbox" id="save_sign_input" />
+                                    <label for="save_sign_input">간편 로그인 정보 저장</label>
+                                </div>
+                                <div id="btn_box">
+                                    <button>로그인</button>
+                                    <span id="line">
+                                        <span>또는</span>
+                                    </span>
+
+                                    <button>QR코드 로그인</button>
+                                </div>
+                            </form>
+                            <div id="login_option">
+                                <a href="">회원가입</a>
+                                <div>
+                                    <a href="">계정찾기</a>
+                                    <a href="">비밀번호 찾기</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
